k8s/23-gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: clinic-gateway
  namespace: clinicos
spec:
  replicas: 2
  selector:
    matchLabels:
      app: clinic-gateway
  template:
    metadata:
      labels:
        app: clinic-gateway
    spec:
      containers:
        - name: clinic-gateway
          image: asia-south1-docker.pkg.dev/clinicos-prod-2026/clinicos-repo/clinic-gateway:1.0.0
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 500m
              memory: 512Mi
            limits:
              cpu: "2"
              memory: 1Gi
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 6
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 15
            timeoutSeconds: 5
            failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: clinic-gateway
  namespace: clinicos
spec:
  selector:
    app: clinic-gateway
  ports:
    - port: 8080
      targetPort: 8080
